--- a/css/styles.css
+++ b/css/styles.css
@@ -585,7 +585,7 @@ margin: 0 8px;
 #about {
   padding: 100px 0;
   background: #07080A;
-  background: url('../images/img2.jpg');    
+  background: url('../images/img.jpg');
   background-size: cover;
 }
 #about .column-title{
@@ -743,7 +743,7 @@ margin: 0;
   background: #FFFFFF;
   background-size: cover;
   color: #000;
-  /* background: url('../images/img2.jpg'); */
+  /* background: url('../images/img.jpg'); */
   background-size: contain;
 }
 #business-stats h1,
